<resources>
    <string name="app_name">Ukulima Poultry.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="home_screen">Home screen</string>
    <string name="signup_here">Signup Here</string>
    <string name="sign_up">Sign Up</string>
    <string name="skip">Skip </string>
    <string name="Approved">approved</string>
    <string name="feed">Please send us your feedback \n and we will get back to you soonest</string>
    <string name="faqs">QSTN1:My order has never arrived\n
                        ANS1;Sorry for the delays.Please call us for help\n\n

                        QSTN2:My order arrived damaged\n
                        ANS2:Please email us and give more information about this \n\n

                        QSTN3:I would like to return my order\n
                        ANS3:We shall send our representatives to sort the issue</string>

    <string name="contact">Phone Number:0797667411\n
                                        0717565039\n\n

                            Email:ukulimapoultry@gmail.org\n
                                    jacqulinembogo@ukulimapoultry.com \n\n

                       </string>



    <string name="thanks">Thank You For Joining us</string>
    <string name="thankshop">Thank You For Shopping With us</string>
    <string name="your_request">Please Wait \n For Admin Approval</string>
    <string name="paynow">Please make your payment here upon order approval </string>

    <string name="paynow3">Make your payment here \n it should constitute shipping fee only</string>
    <string name="payments">Your payment is successful\n Kindly Wait for Delivery \nPlease check your order details for updates </string>
    <string name="amounts">Amount</string>

    
    <string name="home">Home</string>
    <string name="new_product">New Product</string>
    <string name="my_account">My Account</string>
    <string name="logout">Logout</string>

    <string name="email">Email </string>
    <string name="login">Login</string>
    <string name="password">Password </string>
    <string name="sign_in">Sign In </string>
    <string name="forgot_password">staff login</string>
    <string name="new_user">New User? </string>
    <string name="create_account">Create Account </string>
    <string name="username">User Name </string>
    <string name="or">Or</string>
    <string name="submit">Submit</string>
    <string name="full_name">User Name</string>
    <string name="retype_password">Retype password</string>
    <string name="already">Already a member?</string>
    <string name="address">Address</string>
    <string name="phone_no">Phone Number</string>
    <string name="new_products">New Products</string>
    <string name="best_selling">Best Selling</string>
    <string name="trending">Trending</string>
    <string name="conditional">Conditional</string>
    <string name="password_not_match">passwords do not match</string>
    <string name="network_not_connected">network error</string>
    <string name="failed_request">request failed</string>
    <string name="is_invalid">Invalid</string>
    <string name="ok">OK</string>


    <string name="otp_has_send">OTP has been sent to you phone number. </string>
    <string name="otp">OTP</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="otp_not_match">OTP is incorrect</string>
    <string name="create_new_password">Create New Password </string>

    <string name="overview">Overview</string>
    <string name="details">Details</string>
    <string name="review">Review</string>
    <string name="write_review">Write a Review</string>
    <string name="your_rating">Your Rating</string>
    <string name="review_summery">Summery</string>
    <string name="related_prod">Related Products</string>
    <string name="qty">Quantity</string>
    <string name="search_name">Search</string>
    <string name="instock">In Stock</string>
    <string name="outofstock">Out of Stock</string>

    <string name="postedby">Posted By </string>

    <string name="wishlist">Wishlist</string>

    <string name="county_prompt">Choose a county</string>

    <string-array name="county_arrays">
        <item>Mombasa</item>
        <item>Nairobi</item>
        <item>Kisumu</item>
        <item>Nyeri</item>
        <item>Meru</item>
        <item>Kiambu</item>
        <item>Embu</item>
        <item>Migori</item>
    </string-array>

    <string name="open">open</string>
    <string name="close">close</string>


    <string name="add_to_cart">Successfully added into cart.</string>
    <string name="fail_add_to_cart"> Unable to add into cart.Please try again</string>
    <string name="network_error">Please try again. Network not responding</string>

    <string name="continue_tag">Continue</string>
    <string name="add_tag">Add</string>
    <string name="search">Search</string>
    <string name="cart">Cart</string>
    <string name="fail_toGetcart">Please try again, Fail to get user cart details</string>

    <string name="add_to_wishlist">Successfully Added into user wishlist</string>
    <string name="fail_add_to_wishlist">Please try again, Fail to add into user wishlist.</string>
    <string name="delivery_date">Deliver in 3-4 Days</string>
    <string name="you_have">You have</string>
    <string name="product_in_cart"> product in cart.</string>
    <string name="fail_togetwishlist">Please try again, Fail to get User Wishlist.</string>
    <string name="fail_todeletecart">Please Try Again, Fail to delete cart item.</string>
    <string name="fail_toeditcart">Please Try Again, Fail to edit cart.</string>
    <string name="no_prod_into_cart">You do not have any product to purchase </string>

    <string name="prod_name">Product Name</string>
    <string name="price">Price</string>
    <string name="cart_subtotal">Cart Subtotal</string>
    <string name="shipping_fee">Shipping Fee</string>
    <string name="order_total">Order Total</string>
    <string name="place_order">Place Order</string>

    <string name="fail_toordersummery">Fail to get Order Summery, Please try again.</string>

    <string name="billing_addrss">Billing Address</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="add_address">ADD SHIPPING INFORMATION</string>

    <string name="country">Kenya</string>
    <string name="address_line1">Address 1</string>
    <string name="address_line2">Address 2(optional)</string>
    <string name="city">County</string>
    <string name="pincode">code</string>
    <string name="state">Town</string>
    <string name="phone_number">Phone Number</string>
    <string name="save_continue">Save &amp; Continue</string>
    <string name="fail_toaddaddress">Fail to add new Address. Please try again.</string>
    <string name="fail_togetaddress">Fail to get user address, Please try again.</string>

    <string name="select_address">Please select shipping address</string>

    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="paymentGateway">Instant Pay</string>
    <string name="ksh">Ksh</string>

    <string name="thankyou">Thank You</string>
    <string name="your_orderPlaced">Your Order Has \n Been Received</string>
    <string name="we_will_inform_you">We will  SMS you \n about your order info and delivery date.</string>
    <string name="continue_shipping">Continue Shopping</string>
    <string name="order_history">Order History</string>
    <string name="lipanampesa">lipa Na Mpesa</string>
<string name="view_details">View Details</string>
    <string name="pricetag">Price</string>
    <string name="orderid">Order Id</string>
<string name="orderinformation">order information</string>
    <string name="fail_toorderhistory">failed  to get order history</string>
    <string name="select">Select payment option</string>
    <string name="failorder">transaction unsuccessful</string>

    <string name="orderinfo">Continue to make payment </string>
    <string name="pay">Make Payment  </string>
    <string name="amount">Enter amount  \n payment should be at least 50% of the total amount</string>
    <string name="about">   Ukulima Poultry intends to be the largest poultry products \n
                            producing company!\n
                            It has so far started two parent stock farms, two hatcheries,\n
                            a feeds factory, a chicken out-grower scheme and a slaughter house. \n
                            It is in our plans to increase the production of chicken to tackle \n
                            the ever growing demand for chicken products.\n
                            Located in Kirinyaga, Kenya, Ululima Poultry is \n
                            a modern, advanced and synthesized poultry company seeking after\n
                            2F plus M (Farming, Factory and Marketing) which unifies \n
                            production, processing and distribution. From parent stock breeding;\n
                            production of eggs; hatching; feeds production; broiler rearing; processing and \n
                            distribution of dressed poultry; Ukulima poultry farm endeavors to reduce product cost while \n
                            improving quality and hygiene.</string>

    <string name="increment">+</string>
    <string name="decrement">-</string>
    <string name="display">1</string>

</resources>
