<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">


        <ImageView
            android:layout_width="250dp"
            android:layout_height="160dp"
            android:id="@+id/logo"
            android:layout_centerHorizontal="true"
            android:src="@drawable/logo"
            android:layout_below="@id/btn_skip"
            android:layout_marginTop="@dimen/padding_extralarge" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/phone_number"
            android:layout_below="@id/logo"
            android:layout_marginRight="@dimen/padding_too_large"
            android:layout_marginLeft="@dimen/padding_too_large"
            android:layout_marginTop="@dimen/padding_extralarge"
            android:paddingLeft="@dimen/padding_small"
            android:paddingTop="@dimen/padding_small"
            android:hint="@string/phone_no"
            android:inputType="phone"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:layout_below="@id/phone_number"
            android:layout_marginRight="@dimen/padding_too_large"
            android:layout_marginLeft="@dimen/padding_too_large"
            android:layout_marginTop="@dimen/padding_extralarge"
            android:paddingLeft="@dimen/padding_small"
            android:paddingTop="@dimen/padding_small"
            android:hint="@string/password"
            android:inputType="textPassword"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/submit"
            android:text="@string/submit"
            android:gravity="center_horizontal"
            android:background="@drawable/rounded_green"
            android:textColor="@color/white"
            android:layout_below="@id/password"
            android:layout_marginRight="@dimen/padding_too_large"
            android:layout_marginLeft="@dimen/padding_too_large"
            android:layout_marginTop="@dimen/padding_extralarge"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:id="@+id/or"
            android:text="@string/or"
            android:layout_below="@id/submit"
            android:layout_marginTop="@dimen/padding_too_large"
            android:layout_marginBottom="@dimen/padding_extralarge"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/layout_signin"
            android:layout_below="@id/or"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/padding_too_large">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/newUser"
                android:text="@string/already"
                android:textColor="@color/text_color"
                android:layout_marginRight="@dimen/padding_small"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/signup"
                android:text="@string/sign_in"
                android:textColor="@color/text_color" />
        </LinearLayout>

    </RelativeLayout>


</ScrollView>