<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:id="@+id/toolbar"
            android:background="@color/text_color"
            app:popupTheme="@style/AppTheme.PopupOverlay">

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:paddingBottom="@dimen/padding_small">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:background="@color/white">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/shippingbar1"
                android:background="@color/white"
                android:gravity="center_horizontal"
                android:paddingTop="@dimen/padding_small"
                android:paddingBottom="@dimen/padding_small"
                android:paddingLeft="@dimen/padding_small"
                android:layout_alignParentTop="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtShipping"
                    android:gravity="center"

                    android:textColor="@color/colorAccent"
                    android:layout_marginStart="50dp"
                    android:textStyle="bold"
                    android:text="@string/add_address"
                    android:textSize="18sp"
                    android:paddingTop="@dimen/padding_small"/>


            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/shippingbar2"
                android:orientation="vertical"
                android:layout_below="@id/shippingbar1"
                android:layout_marginTop="1dp"
                android:paddingLeft="@dimen/padding_medium">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/country"
                    android:gravity="left|center_vertical"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:paddingTop="@dimen/padding_small" />

                <EditText
                    android:id="@+id/fullname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/full_name"
                    android:paddingRight="@dimen/padding_small"
                    android:paddingBottom="@dimen/padding_small"
                    android:paddingTop="@dimen/padding_small"
                    android:layout_marginRight="@dimen/padding_small"
                    android:textColor="@color/black"
                    android:layout_marginTop="@dimen/padding_small"
                    android:maxLines="1"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_number"
                    android:paddingRight="@dimen/padding_small"
                    android:paddingBottom="@dimen/padding_small"
                    android:paddingTop="@dimen/padding_small"
                    android:layout_marginRight="@dimen/padding_small"
                    android:layout_marginTop="@dimen/padding_small"
                    android:textColor="@color/black"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:inputType="phone"/>




                <EditText
                    android:id="@+id/address1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Select Delivery date"
                    android:focusable="false"
                    android:paddingRight="@dimen/padding_small"
                    android:paddingBottom="@dimen/padding_small"
                    android:paddingTop="@dimen/padding_small"
                    android:layout_marginRight="@dimen/padding_small"
                    android:drawableEnd="@drawable/calender"
                    android:layout_marginTop="@dimen/padding_small"
                    android:textColor="@color/black"
                    android:maxLines="1"
                    android:visibility="visible"
                    android:singleLine="true" />


                <EditText
                    android:id="@+id/address2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address_line2"
                    android:paddingRight="@dimen/padding_small"
                    android:paddingBottom="@dimen/padding_small"
                    android:layout_marginTop="@dimen/padding_small"
                    android:paddingTop="@dimen/padding_small"
                    android:layout_marginRight="@dimen/padding_small"
                    android:textColor="@color/black"
                    android:visibility="gone"
                    android:maxLines="1"
                    android:singleLine="true" />

                <Spinner
                    android:id="@+id/city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/city"
                    android:paddingRight="@dimen/padding_small"
                    android:paddingBottom="@dimen/padding_small"
                    android:paddingTop="@dimen/padding_small"
                    android:layout_marginRight="@dimen/padding_small"
                    android:layout_marginTop="@dimen/padding_small"
                    android:textColor="@color/black"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:entries="@array/county_arrays"
                    />




                <EditText
                    android:id="@+id/state"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/state"
                    android:paddingRight="@dimen/padding_small"
                    android:paddingBottom="@dimen/padding_small"
                    android:paddingTop="@dimen/padding_small"
                    android:layout_marginRight="@dimen/padding_small"
                    android:layout_marginTop="@dimen/padding_small"
                    android:textColor="@color/black"
                    android:maxLines="1"
                    android:visibility="gone"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/pincode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pincode"
                    android:paddingRight="@dimen/padding_small"
                    android:paddingBottom="@dimen/padding_small"
                    android:paddingTop="@dimen/padding_small"
                    android:layout_marginRight="@dimen/padding_small"
                    android:layout_marginTop="@dimen/padding_small"
                    android:textColor="@color/black"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:visibility="gone"
                    android:inputType="number"/>



            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/savecontinue"
                android:text="@string/save_continue"
                android:gravity="center_horizontal"
                android:background="@drawable/rounded_green"
                android:textColor="@color/white"

                android:layout_marginRight="@dimen/padding_too_large"
                android:layout_marginLeft="@dimen/padding_too_large"
                android:layout_marginTop="@dimen/padding_extralarge"
                android:layout_alignParentBottom="true"
                android:layout_below="@id/shippingbar2"/>

        </RelativeLayout>

    </ScrollView>
</android.support.design.widget.CoordinatorLayout>


